--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,8 +6,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: report webpack stats
-      uses: packtracker/report@2.2.7
-      env:
-        PT_PROJECT_TOKEN: ${{ secrets.PT_PROJECT_TOKEN }}
-        WEBPACK_CONFIG_PATH: ./config/webpack/production.js
+    - uses: preactjs/compressed-size-action@v2
