--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,3 +11,5 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - uses: preactjs/compressed-size-action@v2
+      with:
+        pattern: "./build/**/*.{js,css,html,json}"
