--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,7 @@
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -9,7 +12,19 @@ jobs:
     name: report webpack stats
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: preactjs/compressed-size-action@v2
-      with:
-        pattern: "./build/**/*.{js,css,html,json}"
+      - uses: actions/checkout@master
+
+      # Install dependencies
+      - run: npm ci
+
+      # Build and output webpack stats to webpack-stats.json
+      - run: npm run build
+      - run: npx source-map-explorer 'build/static/js/*.js' --json webpack-stats.json
+
+      # Send webpack stats and build information to RelativeCI
+      - name: Send webpack stats to RelativeCI
+        uses: relative-ci/agent-action@v2
+        with:
+          webpackStatsFile: ./webpack-stats.json
+          key: ${{ secrets.RELATIVE_CI_KEY }}
+          token: ${{ secrets.GITHUB_TOKEN }}
