--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,13 +18,12 @@ jobs:
       - run: npm ci
 
       # Build and output webpack stats to webpack-stats.json
-      - run: npm run build
-      - run: npx source-map-explorer 'build/static/js/*.js' --json webpack-stats.json
+      - run: npx react-scripts build --stats
 
       # Send webpack stats and build information to RelativeCI
       - name: Send webpack stats to RelativeCI
         uses: relative-ci/agent-action@v2
         with:
-          webpackStatsFile: ./webpack-stats.json
+          webpackStatsFile: ./build/bundle-stats.json
           key: ${{ secrets.RELATIVE_CI_KEY }}
           token: ${{ secrets.GITHUB_TOKEN }}
