--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,12 +18,12 @@ jobs:
       - run: npm ci
 
       # Build and output webpack stats to webpack-stats.json
-      - run: npx react-scripts build --stats
+      - run: npx craco build
 
       # Send webpack stats and build information to RelativeCI
       - name: Send webpack stats to RelativeCI
         uses: relative-ci/agent-action@v2
         with:
-          webpackStatsFile: ./build/bundle-stats.json
+          webpackStatsFile: ./build/report.json
           key: ${{ secrets.RELATIVE_CI_KEY }}
           token: ${{ secrets.GITHUB_TOKEN }}
