--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react": "^16.13.0",
+    "@craco/craco": "^5.9.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "react-dom": "^16.13.0",
+    "react-scripts": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
