--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Send webpack stats to RelativeCI
         uses: relative-ci/agent-action@v2
         with:
-          webpackStatsFile: ./build/report.json
+          webpackStatsFile: ./build/stats.json
           key: ${{ secrets.RELATIVE_CI_KEY }}
           token: ${{ secrets.GITHUB_TOKEN }}
